# inf443_practice_code

./: .gitignore  README.md
examples/01_transparent_billboards/: Makefile  vscode.code-workspace
examples/01_transparent_billboards/src/: scene.cpp  scene.hpp
examples/02_marching_cubes/01_marching_cube_simple/: Makefile  vscode.code-workspace
examples/02_marching_cubes/02_marching_cube_dynamic/: Makefile  vscode.code-workspace
examples/03_shaders/01_deformation/: Makefile  vscode.code-workspace
examples/03_shaders/02_multi_texture/: Makefile  vscode.code-workspace
examples/04_sketch/02_2d_curve/: Makefile  vscode.code-workspace
examples/05_environment_map/01_skybox/: Makefile  vscode.code-workspace
examples/05_environment_map/02_environment_map/: Makefile  vscode.code-workspace
examples/06_multipass/01_image_filter/: Makefile  vscode.code-workspace
examples/06_multipass/02_image_filter_basic_effects/: Makefile  vscode.code-workspace
examples/06_multipass/03_image_filters_chain/: Makefile  vscode.code-workspace
examples/06_multipass/04_shadow_mapping/: Makefile  README.md  (+1 more)
examples/09_mesh_loading/: Makefile  vscode.code-workspace
scenes_inf443/01_introduction/: Makefile  vscode.code-workspace
scenes_inf443/02a_cpp_bases/: CMakeLists.txt  Makefile
scenes_inf443/02b_opengl_shading/: CMakeLists.txt  Makefile  vscode.code-workspace
scenes_inf443/03_modeling/: Makefile
scenes_inf443/03b_modeling/: Makefile  vscode.code-workspace
scenes_inf443/04a_cpp_files/: CMakeLists.txt  Makefile
scenes_inf443/04a_cpp_files/src/: main.cpp  vec3.cpp  vec3.hpp
scenes_inf443/06_simulation/: Makefile  vscode.code-workspace
scenes_inf443/project/: Makefile  vscode.code-workspace
(+174 files in other folders)
